2008-09-10  Paolo Carlini  <paolo.carlini@oracle.com>

PR libstdc++/37455
	* include/bits/locale_facets.h (ctype<char>::_M_narrow_init,
	ctype<char>::_M_widen_init): Don't define inline.
	* config/locale/darwin/ctype_members.cc: ... define here.
	* config/locale/gnu/ctype_members.cc: ... likewise.
	* config/locale/generic/ctype_members.cc: ... likewise.
	* config/abi/pre/gnu.ver: Export.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140238 138bc75d-0d04-0410-961f-82ee72b054a4